fixed image caption overlap problem

--- a/Jimistyles.css
+++ b/Jimistyles.css
@@ -62,9 +62,8 @@ body {
   font-weight: 100;
   font-size: 1.4rem;
   background-color: #a23173;
-  margin-top: 0.5rem;
+  margin: 0 auto;
   text-align: center;
-  border-radius: 35%;
 }
 
 .tribute-info {
@@ -103,6 +102,12 @@ footer {
   color: #cdc1ab;
   border: 3.5px solid #a23173;
   padding: 10px;
+}
+
+@media only screen and (min-width: 950px) {
+  .img-caption {
+    width: 75%;
+  }
 }
 
 @media only screen and (max-width: 650px) {
